; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_listener.c_evconnlistener_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_listener.c_evconnlistener_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evconnlistener = type { i32, %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evconnlistener_enable(%struct.evconnlistener* %0) #0 {
  %2 = alloca %struct.evconnlistener*, align 8
  %3 = alloca i32, align 4
  store %struct.evconnlistener* %0, %struct.evconnlistener** %2, align 8
  %4 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %5 = call i32 @LOCK(%struct.evconnlistener* %4)
  %6 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %7 = getelementptr inbounds %struct.evconnlistener, %struct.evconnlistener* %6, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %9 = getelementptr inbounds %struct.evconnlistener, %struct.evconnlistener* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %14 = getelementptr inbounds %struct.evconnlistener, %struct.evconnlistener* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = bitcast {}** %16 to i32 (%struct.evconnlistener*)**
  %18 = load i32 (%struct.evconnlistener*)*, i32 (%struct.evconnlistener*)** %17, align 8
  %19 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %20 = call i32 %18(%struct.evconnlistener* %19)
  store i32 %20, i32* %3, align 4
  br label %22

21:                                               ; preds = %1
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %12
  %23 = load %struct.evconnlistener*, %struct.evconnlistener** %2, align 8
  %24 = call i32 @UNLOCK(%struct.evconnlistener* %23)
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @LOCK(%struct.evconnlistener*) #1

declare dso_local i32 @UNLOCK(%struct.evconnlistener*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
